# unjosefizer

./: .gitignore  Cargo.toml  README.md  model_settings.config
.github/: rust.yaml
.github/workflows/: rust.yaml
src/: instancing.rs  lib.rs  logging.rs  main.rs  mesh.rs  metadata.rs  model.rs  model_2d_display.rs  model_orca.rs  paint_convert.rs  paint_sharing.rs  save_load.rs  splitting.rs  utils.rs
src/ui/: mod.rs  ui_types.rs  utilities.rs
templates/: rels.xml
