[package]
name = "unjosefizer"
version = "0.1.0"
edition = "2021"


[lib]
name = "unjosefizer_lib"
path = "src/lib.rs"

[[bin]]
name = "unjosefizer"
path = "src/main.rs"

# [profile.release]
# debug = true

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
zip = "0.6.6"
quick-xml = { version = "0.31.0", features = ["serialize"] }
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }
regex = "1.10.4"
eframe = { version = "0.27", features = ["persistence"] }
egui = "0.27"
egui_file = "0.17.0"
rfd = "0.14.1"
nalgebra = "0.32.4"
crossbeam-channel = "0.5.12"
rayon = "1.10.0"
rstar = "0.12.0"
egui_extras = "0.27.2"
