[package]
name = "unjosefizer"
version = "0.1.0"
edition = "2021"


[lib]
name = "unjosefizer_lib"
path = "src/lib.rs"

[[bin]]
name = "unjosefizer"
path = "src/main.rs"

# [profile.release]
# debug = true

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
# zip = "0.6.6"
zip = "2.2.3"
quick-xml = { version = "0.37.2", features = ["serialize"] }
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }
regex = "1.11.1"
eframe = { version = "0.31.1", features = ["persistence"] }
egui = "0.31.1"
egui_file = "0.22.0"
rfd = "0.15.2"
nalgebra = "0.33.2"
crossbeam-channel = "0.5.14"
rayon = "1.10.0"
rstar = "0.12.2"
egui_extras = { version = "0.31.1", features = ["file", "image", "svg"] }
image = { version = "0.25.5", features = ["jpeg", "png"] }
imageproc = "0.25.0"
bitvec = "1.0.1"
serde_json = "1.0.140"
